test: add tests for CartController and ProductController, update service tests